--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start" : "clear && npm install && nodemon backend/server.js",
+    "start": "npm install && nodemon backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,7 +12,6 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.19.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
@@ -20,7 +19,10 @@
     "mysql2": "^3.17.1",
     "nodemon": "^3.1.11",
     "pg": "^8.18.0",
-    "prisma": "^6.19.2",
     "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "@prisma/client": "^6.19.2",
+    "prisma": "^6.19.2"
   }
 }
