--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npm install && nodemon backend/server.js",
+    "start": "nodemon backend/server.js",
+    "postinstall": "prisma generate",
+    "prisma:generate": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,5 +26,8 @@
   "devDependencies": {
     "@prisma/client": "^6.19.2",
     "prisma": "^6.19.2"
+  },
+  "prisma": {
+    "schema": "backend/prisma/schema.prisma"
   }
 }
