--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,4 +2,7 @@
 VITE_API_BASE_URL=/api
 
 # Backend origin used by Vite's dev proxy for /api routes.
-VITE_BACKEND_ORIGIN=http://localhost:5432
+VITE_BACKEND_ORIGIN=http://localhost:5001
+
+# Optional helper key used by demo admin account provisioning in the UI.
+VITE_ADMIN_INVITE_KEY=change_this_admin_invite_key
